--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -22,6 +22,9 @@ pageTitle += ' [ ' + config.title + ' ]';
   <% } %>
 </head>
 <body>
+<section class="canvas-wrap">
+<div class="canvas-content">
+<div id="canvas" class="gradient"></div>
 
 <div id="menu-outer">
   <div id="menu-inner">
@@ -52,6 +55,7 @@ pageTitle += ' [ ' + config.title + ' ]';
     <script src="<%=url%>"></script>
   <% }); %>
 <% } %>
-
+</div>
+</section>
 </body>
 </html>
