--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -22,9 +22,20 @@ pageTitle += ' [ ' + config.title + ' ]';
   <% } %>
 </head>
 <body>
-<section class="canvas-wrap">
-<div class="canvas-content">
-<div id="canvas" class="gradient"></div>
+  <section class="canvas-wrap">
+    <div class="canvas-content">
+      <div id="canvas" class="gradient">
+        <div class="background">
+          <div class="background_1"></div>
+          <div class="background_2"></div>
+          <div class="background_3"></div>
+          <div class="background_4"></div>
+          <div class="background_5"></div>
+          <div class="background_6"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 <div id="menu-outer">
   <div id="menu-inner">
@@ -55,7 +66,6 @@ pageTitle += ' [ ' + config.title + ' ]';
     <script src="<%=url%>"></script>
   <% }); %>
 <% } %>
-</div>
-</section>
+
 </body>
 </html>
