--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -26,12 +26,7 @@ pageTitle += ' [ ' + config.title + ' ]';
     <div class="canvas-content">
       <div id="canvas" class="gradient">
         <div class="background">
-          <div class="background_1"></div>
-          <div class="background_2"></div>
-          <div class="background_3"></div>
-          <div class="background_4"></div>
-          <div class="background_5"></div>
-          <div class="background_6"></div>
+          <canvas></canvas>
         </div>
       </div>
     </div>
