--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -25,20 +25,15 @@ pageTitle += ' [ ' + config.title + ' ]';
   <section class="canvas-wrap">
     <div class="canvas-content">
       <div id="canvas" class="gradient">
-        <div class="background">
-          <canvas id="bg_canvas" style=""></canvas>
-        </div>
       </div>
     </div>
   </section>
 
-<div id="menu-outer">
+<!-- <div id="menu-outer">
   <div id="menu-inner">
-    <% Object.keys(theme.menu).forEach(function(key) { %>
-      <a href="<%=theme.menu[key]%>"><%=key%></a>
-    <% }); %>
+    
   </div>
-</div>
+</div> -->
 
 <div id="content-outer">
   <div id="content-inner">
