--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -29,12 +29,6 @@ pageTitle += ' [ ' + config.title + ' ]';
     </div>
   </section>
 
-<!-- <div id="menu-outer">
-  <div id="menu-inner">
-    
-  </div>
-</div> -->
-
 <div id="content-outer">
   <div id="content-inner">
     <%- body %>
@@ -43,7 +37,7 @@ pageTitle += ' [ ' + config.title + ' ]';
 
 <div id="bottom-outer">
   <div id="bottom-inner">
-    Site by <%=config.author%> using
+    Site by <%=theme.author%> using
     <a href="http://hexo.io">hexo blog framework</a>.
     <br>
     <a href="<%=config.root%>">Home</a>
