--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -88,5 +88,12 @@
 #info a:hover {
     text-shadow: 0 0 20px #72FFEE;
 }
-
+#index_menu {
+    width: 44%;
+    height: 20%;
+    position: absolute;
+    right: 26%;
+    top: 65%;
+    border: solid 1px #72ffee;
+}
 
