line draw with canvas

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -26,7 +26,7 @@ pageTitle += ' [ ' + config.title + ' ]';
     <div class="canvas-content">
       <div id="canvas" class="gradient">
         <div class="background">
-          <canvas></canvas>
+          <canvas id="bg_canvas" style=""></canvas>
         </div>
       </div>
     </div>
