圆绘制完成

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -21,7 +21,7 @@ pageTitle += ' [ ' + config.title + ' ]';
     <% }); %>
   <% } %>
 </head>
-<body>
+<body style="position:fixed;height:100%;width:100%;">
   <section class="canvas-wrap">
     <div class="canvas-content">
       <div id="canvas" class="gradient">
