--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -17,17 +17,9 @@
     background: #09192A;
 }
 .canvas-wrap {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
-}
-.canvas-wrap.canvas-content{
-    position:relative;
-    z-index:2000;
-    height: 100%;
-    color:#fff;
-    text-align:center;
-    padding-top:30px;
 }
 #menu-outer {
     position: absolute;
