--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -26,7 +26,8 @@
 	<canvas id="menu_canvas"></canvas>
 	<div class="menu_box">
 	<% Object.keys(theme.menu).forEach(function(key) { %>
-		<a href="<%=theme.menu[key]%>">
+		<a href="<%=theme.menu[key]%>" max-width='100px';
+    max-height='100px;'>
 			<span><%=key%></span>
 		</a>
     <% }); %>
