--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,5 +1,6 @@
 <div class="background">
-    <canvas id="bg_canvas" style=""></canvas>
+    <canvas id="line_canvas" style=""></canvas>
+    <canvas id="circle_canvas" width="150" height="150"></canvas>
 </div>
 <div id="index_main">
 	<div id="photo">
