--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -9,6 +9,9 @@
     height: 100%;
     box-shadow: 0px 0px 10px 10px #72FFEE inset;
 }
+#circle_canvas {
+  position: absolute;
+}
 #canvas {
     width: 100%;
     height: 100%;
@@ -106,7 +109,7 @@
     box-sizing: border-box;
     float: left;
     z-index: 9999;
-    /*border: solid 1px #72ffee;*/
+    /*box-shadow:0px 0px 20px 0px #333333;*/
 }
 #index_menu .menu_box a:nth-child(2n) {
     margin-top: 100px;
