--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -97,7 +97,7 @@
     position: absolute;
     right: 22%;
     top: 65%;
-    border: solid 1px #72ffee;
+    /*border: solid 1px #72ffee;*/
 }
 #index_menu .menu_box {
     position: absolute;
@@ -114,8 +114,37 @@
 #index_menu .menu_box a:nth-child(2n) {
     margin-top: 100px;
 }
+#index_menu .menu_box a:hover {
+  text-decoration: none;
+}
 #index_menu .menu_box a > span {
     display: none;
+    width: 200%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #72FFEE;
+    /*border-bottom: solid 1px #72ffee;*/
+}
+#index_menu .Home_span {
+    margin-left: 140%;
+    margin-top: 60%;
+    border-bottom: solid 3px #FE00C3;
+}
+#index_menu .About_span {
+    margin-left: 140%;
+    margin-top: 60%;
+    border-bottom: solid 3px #1AA406;
+}
+#index_menu .Archives_span {
+    margin-left: 140%;
+    margin-top: -50%;
+    border-bottom: solid 3px #214FE3;
+}
+#index_menu .Contact_span {
+    margin-left: 140%;
+    margin-top: -50%;
+    border-bottom: solid 3px #DFB201;
 }
 #index_menu .menu_canvas {
   position: absolute;
