--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -120,31 +120,47 @@
 #index_menu .menu_box a > span {
     display: none;
     width: 200%;
+    /*height: 98%;*/
     text-align: center;
     font-size: 20px;
     font-weight: bold;
     color: #72FFEE;
     /*border-bottom: solid 1px #72ffee;*/
 }
+#index_menu .Home_span span,
+#index_menu .About_span span {
+  display: block;
+  transform: skew(-30deg);
+}
 #index_menu .Home_span {
-    margin-left: 140%;
-    margin-top: 60%;
-    border-bottom: solid 3px #FE00C3;
+    margin-left: 120%;
+    margin-top: 30%;
+    transform: skew(30deg);
+    box-shadow: 0 0 10px 3px #FE00C3;
 }
 #index_menu .About_span {
-    margin-left: 140%;
-    margin-top: 60%;
-    border-bottom: solid 3px #1AA406;
+    margin-left: 120%;
+    margin-top: 30%;
+    transform: skew(30deg);
+    box-shadow: 0 0 10px 3px #214FE3;
+
+}
+#index_menu .Archives_span span,
+#index_menu .Contact_span span {
+  display: block;
+  transform: skew(30deg);
 }
 #index_menu .Archives_span {
-    margin-left: 140%;
-    margin-top: -50%;
-    border-bottom: solid 3px #214FE3;
+    margin-left: 120%;
+    margin-top: 30%;
+    transform: skew(-30deg);
+    box-shadow: 0 0 10px 3px #1AA406;
 }
 #index_menu .Contact_span {
-    margin-left: 140%;
-    margin-top: -50%;
-    border-bottom: solid 3px #DFB201;
+    margin-left: 120%;
+    margin-top: 30%;
+    transform: skew(-30deg);
+    box-shadow: 0 0 10px 3px #DFB201;
 }
 #index_menu .menu_canvas {
   position: absolute;
