--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -29,7 +29,7 @@
 		<a href="<%=theme.menu[key]%>" max-width='100px';
     max-height='100px;'>
     		<canvas class="menu_canvas"></canvas>
-			<span class="<%=key%>_span"><%=key%></span>
+			<span class="<%=key%>_span"><span><%=key%></span></span>
 		</a>
 		
     <% }); %>
