--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,16 +1,16 @@
 
 <%
-var pageTitle = page.title || config.subtitle || '';
+var pageTitle = page.title || '';
 if (is_archive()) pageTitle = 'Archives';
 if (is_tag()) pageTitle = 'Tag: ' + page.tag;
 if (is_category()) pageTitle = 'Category: ' + page.category;
 if (is_month()) pageTitle += ': ' + page.month + '/' + page.year;
 if (is_year()) pageTitle += ': ' + page.year;
-pageTitle += ' [ ' + config.title + ' ]';
+pageTitle += ' [ ' + theme.title + ' ]';
 %>
 
 <!DOCTYPE html>
-<html lang="<%=config.language%>">
+<html lang="<%=theme.language%>">
 <head>
   <meta charset="UTF-8">
   <title><%=pageTitle%></title>
