change js structure

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,4 +1,6 @@
-
+<div class="background">
+    <canvas id="line_canvas" style=""></canvas>
+</div>
 <%
 var categoriesList = list_categories({ show_count: false }),
   tagsList = list_tags({ show_count: false }),
