--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,3 +1,4 @@
+
 <div class="background">
     <canvas id="line_canvas" style=""></canvas>
     <canvas id="circle_canvas" width="150" height="150"></canvas>
@@ -35,3 +36,10 @@
     <% }); %>
     </div>
 </div>
+
+<% if (theme.index_scripts !== undefined && theme.index_scripts.length > 0) { %>
+  <!-- scripts list from theme config.yml -->
+  <% theme.index_scripts.forEach(function(url) { %>
+    <script src="<%=url%>"></script>
+  <% }); %>
+<% } %>
