--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -7,7 +7,7 @@ var categoriesList = list_categories({ show_count: false }),
 <% if (!is_year()) { %>
   <div id="archive">
 
-    <h1>Archives</h1>
+    <h1>Archives<span></span></h1>
 
     <% if (theme.atom) { %>
       <p>
