--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -177,7 +177,6 @@
   top: 35%;
   width: 60%;
   height: 40%;
-  background: #fff;
 }
 #archive > h1 {
   position: absolute;
@@ -185,8 +184,9 @@
   top: -40%;
   color: #72FFEE;
   animation: text_color 2s ease-in-out infinite alternate;
-  padding: 20px 40px;
+  padding: 1.5% 3.5%;
   background: rgba(119,192,253,0.2);
+  box-shadow: 0 0 5px 0 #72ffee;
 }
 #archive > h1 span {
   display: block;
@@ -206,9 +206,49 @@
   }
 }
 #archive aside {
+  position: relative;
   float: left;
   width: 29%;
   height: 100%;
-  margin: 0 20px;
-  border: solid 1px #72FFEE;
+  margin: 0 2%;
+  border: solid 1px #77C0FD;
+  box-shadow: 0 0 5px 0 #77FFEE;
+}
+#archive .categories {
+  /*background: rgba(0,255,0,0.2);*/
+}
+#archive .tags {
+  /*background: rgba(255,0,0,0.2);*/
+}
+#archive .archives {
+  /*background: rgba(0,0,255,0.2);*/
+}
+#archive aside h2 {
+  position: absolute;
+  overflow: hidden;
+  left: 50%;
+  top: -80px;
+  margin-left: -60px;
+  width: 120px;
+  height: 120px;
+  text-align: center;
+  line-height: 110px;
+  color: #72ffee;
+  border: solid 5px #72ffee;
+  border-radius: 50%;
+}
+#archive aside h2 span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+}
+#archive .categories h2 span {
+  background: rgba(0,255,0,0.5);
+}
+#archive .tags h2 span {
+  background: rgba(255,0,0,0.5);
+}
+#archive .archives h2 span {
+  background: rgba(0,0,255,0.5);
 }
