--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -214,18 +214,8 @@
   border: solid 1px #77C0FD;
   box-shadow: 0 0 5px 0 #77FFEE;
 }
-#archive .categories {
-  /*background: rgba(0,255,0,0.2);*/
-}
-#archive .tags {
-  /*background: rgba(255,0,0,0.2);*/
-}
-#archive .archives {
-  /*background: rgba(0,0,255,0.2);*/
-}
 #archive aside h2 {
   position: absolute;
-  overflow: hidden;
   left: 50%;
   top: -80px;
   margin-left: -60px;
@@ -242,6 +232,11 @@
   width: 100%;
   height: 100%;
   color: #fff;
+  border-radius: 50%;
+  transition: transform 2s;
+}
+#archive aside h2 span:hover {
+  transform: rotateZ(360deg);
 }
 #archive .categories h2 span {
   background: rgba(0,255,0,0.5);
@@ -251,4 +246,16 @@
 }
 #archive .archives h2 span {
   background: rgba(0,0,255,0.5);
+}
+#archive aside ul {
+  margin-top: 60px;
+  /*background: #fff;*/
+}
+#archive aside ul a {
+  display: inline-block;
+  font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  padding: 0px 15px;
+  background: #f00;
 }
