完成返回首页

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -43,7 +43,10 @@ var categoriesList = list_categories({ show_count: false }),
         <p>None.</p>
       <% } %>
     </aside>
-
+    
+    <div id="archive_back">
+      <a href="/">返回首页</a>
+    </div>
   </div>
 <% } else { %>
 
