--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -180,13 +180,29 @@
 }
 #archive > h1 {
   position: absolute;
-  left: -20%;
-  top: -40%;
+  left: -25%;
+  top: -50%;
   color: #72FFEE;
   animation: text_color 2s ease-in-out infinite alternate;
   padding: 1.5% 3.5%;
   background: rgba(119,192,253,0.2);
-  box-shadow: 0 0 5px 0 #72ffee;
+  box-shadow: 0 0 5px 0 #72FFEE;
+}
+#archive #archive_back {
+  position: absolute;
+  right: -30%;
+  bottom: -30%;
+  padding: 1.5% 3.5%;
+  background: rgba(247,201,4,0.2);
+  border: dashed 3px #f00;
+  box-shadow: 0 0 10px 0 #F7C904;
+}
+#archive #archive_back a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #F7C904;
 }
 #archive > h1 span {
   display: block;
@@ -194,7 +210,7 @@
   left: 0px;
   width: 100%;
   border: solid 1px #72FFEE;
-  box-shadow: 0 0 5px 0 #72FFEE;
+  box-shadow: 0 0 5px 0 #F7C904;
   animation: scan 2s linear 1s alternate infinite;
 }
 @keyframes scan {
@@ -248,14 +264,15 @@
   background: rgba(0,0,255,0.5);
 }
 #archive aside ul {
-  margin-top: 60px;
-  /*background: #fff;*/
+  margin-top: 50px;
+  padding: 5px 10px;
+  /*border-top: solid 1px #72ffee;*/
 }
 #archive aside ul a {
   display: inline-block;
   font-size: 14px;
-  color: #fff;
+  color: #000;
   text-decoration: none;
   padding: 0px 15px;
-  background: #f00;
+  background: #72ffee;
 }
