--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -1,4 +1,4 @@
-/*#72FFEE  #77C0FD*/
+/*rgba(114,255,238,0.5) #72FFEE  #77C0FD*/
 .background {
     position: absolute;
     right: 10px;
@@ -274,105 +274,4 @@
   text-decoration: none;
   padding: 0px 15px;
   background: #72ffee;
-}
-/****************
-*
-*
-*     旋转球体部分
-*
-*
-*****************/
-.window {
-  position: absolute;
-  left: -25%;
-  bottom: 5%;
-  width: 10vw;
-  height: 10vw;
-  perspective: 800px;
-}    
-.ball {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 100px auto; 
-  transform-style: preserve-3d;
-  animation: gundong 5s linear 1s infinite;
-}
-.xcircle,.ycircle,.zcircle {
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px;
-  border-radius: 50%;
-  transition:all 1s ease;
-}
-.x1,.x3,.y1,.y3,.z1,.z3 {
-  width: 87.5%;
-  height: 87.5%;
-  margin: 6.25% auto;
-}
-.x2,.y2,.z2 {
-  width: 100%;
-  height: 100%;
-}
-.x2,.xLine {
-  border: solid 2px #72FFEE;
-  transform: rotateX(90deg);
-}
-.z2,.zLine {
-  border: solid 2px #72FFEE;
-  transform: rotateY(90deg);
-}
-.ycircle,.yLine {
-  border: solid 2px #72FFEE;
-}
-.yLine {
-  transform: rotateZ(90deg);
-}
-.x1 {
-  border: solid 2px #72FFEE;
-  transform: rotateX(90deg) translateZ(2.5vw);
-}
-.x3 {
-  border: solid 2px #72FFEE;
-  transform: rotateX(90deg) translateZ(-2.5vw);
-}
-.z1 {
-  border: solid 2px #72FFEE;
-  transform: rotateY(90deg) translateZ(2.5vw);
-}
-.z3 {
-  border: solid 2px #72FFEE;
-  transform: rotateY(90deg) translateZ(-2.5vw);
-}
-.y1 {
-  border: solid 2px #72FFEE;
-  transform: translateZ(2.5vw);
-}
-.y3 {
-  border: solid 2px #72FFEE;
-  transform: translateZ(-2.5vw);
-}
-.xLine,.yLine,.zLine {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-}
-@keyframes gundong{
-  0% {
-    transform: rotateY(0deg) rotateX(0deg);
-  }
-  20% {
-    transform: rotateY(90deg) rotateX(90deg);
-  }
-  40% {
-    transform: rotateY(180deg) rotateX(180deg);
-  }
-  80% {
-    transform: rotateY(270deg) rotateX(270deg);
-  }
-  100% {
-    transform: rotateY(360deg) rotateX(360deg);
-  }
 }
