--- a/layout/category.ejs
+++ b/layout/category.ejs
@@ -1,8 +1,9 @@
 
 <div id="category">
   <h1><%=page.category%></h1>
+  <ul class="category-item-box">
   <% page.posts.each(function(article) { %>
-    <div class="category-item">
+    <li class="category-item">
       <% if (article.link) { %>
         <a href="<%=url_for(article.link)%>" target="_blank">
           <%=article.title || 'No Title'%>
@@ -15,8 +16,16 @@
       <time datetime="<%=date_xml(article.date)%>">
         <%=date(article.date)%>
       </time>
-    </div>
+    </li>
   <% }); %>
+  </ul>
 </div>
 
 <%-partial('partials/pagination')%>
+
+<% if (theme.archives_scripts !== undefined && theme.archives_scripts.length > 0) { %>
+  <!-- scripts list from theme config.yml -->
+  <% theme.archives_scripts.forEach(function(url) { %>
+    <script src="<%=url%>"></script>
+  <% }); %>
+<% } %>
