--- a/layout/tag.ejs
+++ b/layout/tag.ejs
@@ -20,3 +20,10 @@
 </div>
 
 <%-partial('partials/pagination')%>
+
+<% if (theme.archives_scripts !== undefined && theme.archives_scripts.length > 0) { %>
+  <!-- scripts list from theme config.yml -->
+  <% theme.archives_scripts.forEach(function(url) { %>
+    <script src="<%=url%>"></script>
+  <% }); %>
+<% } %>
