--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -190,7 +190,7 @@
 }
 #archive #archive_back {
   position: absolute;
-  right: -30%;
+  right: -26%;
   bottom: -30%;
   padding: 1.5% 3.5%;
   background: rgba(247,201,4,0.2);
@@ -274,4 +274,16 @@
   text-decoration: none;
   padding: 0px 15px;
   background: #72ffee;
+}
+#category {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: #72ffee;
+}
+#category h1 {
+  color: #72ffee;
+}
+#category .category-item-box {
+  
 }
