标签页整理

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -10,7 +10,7 @@ pageTitle += ' [ ' + theme.title + ' ]';
 %>
 
 <!DOCTYPE html>
-<html lang="<%=theme.language%>">
+<html lang="<%=config.language%>">
 <head>
   <meta charset="UTF-8">
   <title><%=pageTitle%></title>
