--- a/source/css/mytheme.css
+++ b/source/css/mytheme.css
@@ -253,6 +253,7 @@
   justify-content:space-between;
   align-content: flex-start;
   overflow: hidden;
+  margin-top: 0;
 }
 #archive aside ul li {
   flex: 0 1 auto;
